test android flickering fix

--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -194,9 +194,10 @@ img.branch{
     padding: 0;
 }
 
-.ui-page {
-    -webkit-backface-visibility: hidden;
-}
+
+
+
+
 
 /* ThemeRoller generated (with modifications) */
 /* Swatches */
